# qtCannelloniCanBus

./: CMakeLists.txt  CannelloniCanBackend.cpp  CannelloniCanBackend.h  QtCannelloniCanBusPlugin.cpp  README.md
